# google_vs_xlsx_comparator

./: .gitignore  main.py  pyproject.toml  readme.md  task.md
models/: base.py  description.py  extra.py  main.py
tests/: test_main.py  test_models.py
